Fixed HTML not covering screen

--- a/browse_style.css
+++ b/browse_style.css
@@ -1,10 +1,16 @@
+html{
+    height: -webkit-fill-available
+} 
 body{
+    position: fixed;
+    overflow-x: hidden;
+    height: 100%;
+    width: 100%;
+    margin: 8px;
+    
     display: flex;
     flex-direction: column;
     justify-content: start;
-}
-strong, p{
-    font-family: 'Archivo', sans-serif;
 }
 
 /*Navbar*/
