--- a/ranking_style.css
+++ b/ranking_style.css
@@ -1,3 +1,19 @@
+html{
+    height: -webkit-fill-available
+} 
+body{
+    position: fixed;
+    overflow-x: hidden;
+    height: 100%;
+    width: 100%;
+    margin: 8px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+
+
 /*Navbar*/
 .navbar{
     width: 100%;
